Moved .env to /Project-Code, Fixed docker-compose.yaml, added /init_data and create.sql for users table

--- a/Project-Code/docker-compose.yaml
+++ b/Project-Code/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     expose:
       - '5432'
     volumes:
-      - lab-09-web-services:/var/lib/postgresql/data
+      - CSCI-3308-Project:/var/lib/postgresql/data
       - ./init_data:/docker-entrypoint-initdb.d
   web:
     image: node:lts
