--- a/Project-Code/package.json
+++ b/Project-Code/package.json
@@ -5,6 +5,7 @@
         "axios": "^1.1.3",
         "bcrypt": "^5.1.0",
         "body-parser": "1.20.0",
+        "chai": "^4.3.7",
         "ejs": "^3.1.8",
         "ejs-lint": "^2.0.0",
         "express": "^4.6.1",
