--- a/Project-Code/package.json
+++ b/Project-Code/package.json
@@ -10,6 +10,7 @@
         "ejs-lint": "^2.0.0",
         "express": "^4.6.1",
         "express-session": "1.17.3",
+        "mocha": "^10.1.0",
         "pg-promise": "^10.11.1"
     },
     "scripts": {
