Update test in package.json file to point to mocha

--- a/Project-Code/package.json
+++ b/Project-Code/package.json
@@ -15,6 +15,7 @@
     },
     "scripts": {
         "prestart": "npm install",
-        "start": "node index.js"
+        "start": "node index.js",
+        "test": "mocha"
     }
 }
