Added additional webserver on port 4000 for demonstration

--- a/Project-Code/docker-compose.yaml
+++ b/Project-Code/docker-compose.yaml
@@ -18,7 +18,21 @@ services:
     depends_on:
       - db
     ports:
-      - ':3000'
+      - '3000:3000'
+    volumes:
+      - ./:/home/node/app
+    command: 'npm start'
+  webDemo:
+    image: node:lts
+    user: 'node'
+    working_dir: /home/node/app
+    env_file: .env
+    environment:
+      - NODE_ENV=development
+    depends_on:
+      - db
+    ports:
+      - '4000:3000'
     volumes:
       - ./:/home/node/app
     command: 'npm start'
